--- a/package.json
+++ b/package.json
@@ -1,165 +1,170 @@
 {
-	"name": "seedling",
-	"version": "0.0.0",
-	"description": "This is a boilerplate repo I use when I want to spin up a new Node.JS project.",
-	"main": "lib/index.js",
-	"scripts": {
-		"aws": "./node_modules/gulp/bin/gulp.js aws",
-		"atom-plugins": "apm install linter linter-jscs jscs-fixer react",
-		"beautify": "./node_modules/gulp/bin/gulp.js beautify",
-		"bootstrap-test": "NODE_ENV=test node api/bootstrap.js",
-		"bootstrap-staging": "NODE_ENV=staging node api/bootstrap.js",
-		"bootstrap-production": "NODE_ENV=production node api/bootstrap.js",
-		"build": "./node_modules/gulp/bin/gulp.js build",
-		"build-prod": "NODE_ENV=production ./node_modules/gulp/bin/gulp.js build",
-		"deploy-api-production": "NODE_ENV=staging ./node_modules/gulp/bin/gulp.js deploy-api",
-		"deploy-api-staging": "NODE_ENV=staging ./node_modules/gulp/bin/gulp.js deploy-api",
-		"dev": "NODE_ENV=development ./node_modules/gulp/bin/gulp.js dev",
-		"help": "./node_modules/gulp/bin/gulp.js help",
-		"json": "./node_modules/gulp/bin/gulp.js json",
-		"refreeze": "rm -f npm-shrinkwrap.json && npm run reinstall && npm shrinkwrap --dev",
-		"reinstall": "rm -rf node_modules;npm-cache install npm || npm install",
-		"postinstall": "./node_modules/gulp/bin/gulp.js json",
-		"postuninstall": "./node_modules/gulp/bin/gulp.js json",
-		"prod": "NODE_ENV=production node ./lib/index.js",
-		"start": "node ./lib/index.js",
-		"setup": "npm install npm-cache -g",
-		"test": "NODE_ENV=test mocha test",
-		"quickstart": "npm run setup && npm run reinstall && npm run dev"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/spencerbeggs/seedling.git"
-	},
-	"author": "C. Spencer Beggs <spencer@beg.gs>",
-	"license": "MIT",
-	"bugs": {
-		"url": "https://github.com/spencerbeggs/seedling/issues"
-	},
-	"homepage": "https://github.com/spencerbeggs/seedling#readme",
-	"dependencies": {
-		"aws-sdk": "^2.2.16",
-		"body-parser": "^1.14.1",
-		"compression": "^1.6.0",
-		"cookie-parser": "^1.4.0",
-		"dynamic-reverse-proxy": "^0.7.0-alpha2",
-		"express": "^4.13.3",
-		"express-device": "^0.4.2",
-		"express-handlebars": "^2.0.1",
-		"html-minifier": "^1.0.0",
-		"lodash": "^3.10.1",
-		"node-env-file": "^0.1.8",
-		"normalize.css": "^3.0.2",
-		"serve-favicon": "^2.2.0"
-	},
-	"browser": {
-		"config": "./config/index.js"
-	},
-	"engines": {
-		"node": "5.x",
-		"npm": "2.x"
-	},
-	"devDependencies": {
-		"auth0-lock": "^7.12.0",
-		"aws-lambda-mock-context": "^1.0.0",
-		"aws-sdk": "^2.2.17",
-		"aws-sdk-promise": "0.0.2",
-		"babel": "^6.1.18",
-		"babel-core": "^6.1.21",
-		"babel-eslint": "^4.1.5",
-		"babel-loader": "^6.2.0",
-		"babel-plugin-transform-runtime": "^6.1.18",
-		"babel-polyfill": "^6.1.19",
-		"babel-preset-es2015": "^6.1.18",
-		"babel-preset-react": "^6.1.18",
-		"babel-preset-stage-0": "^6.1.18",
-		"babel-runtime": "^6.1.18",
-		"babelify": "^7.2.0",
-		"backbone": "^1.2.3",
-		"bootstrap": "git://github.com/twbs/bootstrap.git#v4.0.0-alpha",
-		"brfs": "^1.4.1",
-		"browser-sync": "^2.10.0",
-		"browserify": "^12.0.1",
-		"browserify-data": "^0.2.0",
-		"chai": "^3.4.1",
-		"coffee-loader": "^0.7.2",
-		"core-js": "^1.2.6",
-		"del": "^2.1.0",
-		"ejsify": "^1.0.0",
-		"envify": "^3.4.0",
-		"envify-loader": "^0.1.0",
-		"eslint": "^1.9.0",
-		"eslint-config-airbnb": "^1.0.0",
-		"eslint-config-es2015-react": "^0.1.2",
-		"eslint-plugin-babel": "^2.1.1",
-		"eslint-plugin-react": "^3.9.0",
-		"flux": "^2.1.1",
-		"gulp": "gulpjs/gulp#4.0",
-		"gulp-autoprefixer": "^3.0.2",
-		"gulp-babel": "^6.1.0",
-		"gulp-concat": "^2.4.1",
-		"gulp-copy": "0.0.2",
-		"gulp-eol": "^0.1.1",
-		"gulp-esdoc": "^0.1.0",
-		"gulp-esformatter": "^5.0.0",
-		"gulp-eslint": "^1.1.0",
-		"gulp-if": "^2.0.0",
-		"gulp-install": "^0.6.0",
-		"gulp-jsbeautifier": "1.0.1",
-		"gulp-jscs": "^3.0.2",
-		"gulp-json-format": "^1.0.0",
-		"gulp-less": "^3.0.5",
-		"gulp-minify-css": "^1.2.1",
-		"gulp-mocha": "^2.2.0",
-		"gulp-nodemon": "^2.0.4",
-		"gulp-notify": "^2.0.0",
-		"gulp-plumber": "^1.0.1",
-		"gulp-prettydiff": "^1.0.0",
-		"gulp-rename": "^1.2.0",
-		"gulp-sass": "^2.0.4",
-		"gulp-sourcemaps": "^1.6.0",
-		"gulp-strip-debug": "^1.1.0",
-		"gulp-task-listing": "^1.0.1",
-		"gulp-uglify": "^1.5.1",
-		"gulp-util": "^3.0.6",
-		"gulp-watch": "^4.3.5",
-		"gulp-webpack": "^1.5.0",
-		"gulp-zip": "^3.0.2",
-		"hbsfy": "^2.3.1",
-		"history": "^1.13.1",
-		"html": "0.0.10",
-		"http-proxy": "^1.11.2",
-		"humps": "^1.0.0",
-		"jquery": "^2.1.3",
-		"json-loader": "^0.5.3",
-		"keymirror": "^0.1.1",
-		"less-plugin-autoprefix": "^1.5.1",
-		"mocha": "^2.3.4",
-		"moment": "^2.10.6",
-		"node-aws-lambda": "^0.1.6",
-		"normalizr": "^1.4.0",
-		"packageify": "^0.2.3",
-		"pretty-hrtime": "^1.0.1",
-		"prettydiff": "^1.15.17",
-		"react": "^0.14.2",
-		"react-dom": "^0.14.2",
-		"react-pure-render": "^1.0.2",
-		"react-router": "^1.0.0",
-		"recursive-readdir": "^1.2.1",
-		"request": "^2.66.0",
-		"selectn": "^0.10.0",
-		"sinon": "^1.17.2",
-		"sinon-chai": "^2.8.0",
-		"transform-loader": "^0.2.3",
-		"uglify-loader": "^1.3.0",
-		"uglifyify": "^3.0.1",
-		"vinyl-buffer": "^1.0.0",
-		"vinyl-named": "^1.1.0",
-		"vinyl-source-stream": "^1.0.0",
-		"vinyl-transform": "^1.0.0",
-		"watchify": "^3.6.1",
-		"webpack": "^1.12.6",
-		"webpack-stream": "^2.1.1",
-		"whatwg-fetch": "^0.10.1"
-	}
+  "name": "seedling",
+  "version": "0.0.0",
+  "description": "This is a boilerplate repo I use when I want to spin up a new Node.JS project.",
+  "main": "lib/index.js",
+  "scripts": {
+    "aws": "./node_modules/gulp/bin/gulp.js aws",
+    "atom-plugins": "apm install linter linter-jscs jscs-fixer react",
+    "beautify": "./node_modules/gulp/bin/gulp.js beautify",
+    "bootstrap-test": "NODE_ENV=test node api/bootstrap.js",
+    "bootstrap-staging": "NODE_ENV=staging node api/bootstrap.js",
+    "bootstrap-production": "NODE_ENV=production node api/bootstrap.js",
+    "build": "./node_modules/gulp/bin/gulp.js build",
+    "build-prod": "NODE_ENV=production ./node_modules/gulp/bin/gulp.js build",
+    "deploy-api-production": "NODE_ENV=staging ./node_modules/gulp/bin/gulp.js deploy-api",
+    "deploy-api-staging": "NODE_ENV=staging ./node_modules/gulp/bin/gulp.js deploy-api",
+    "dev": "NODE_ENV=development ./node_modules/gulp/bin/gulp.js dev",
+    "help": "./node_modules/gulp/bin/gulp.js help",
+    "json": "./node_modules/gulp/bin/gulp.js json",
+    "refreeze": "rm -f npm-shrinkwrap.json && npm run reinstall && npm prune && npm shrinkwrap --dev",
+    "reinstall": "rm -rf node_modules;npm-cache install npm || npm install",
+    "postinstall": "./node_modules/gulp/bin/gulp.js json",
+    "postuninstall": "./node_modules/gulp/bin/gulp.js json",
+    "prod": "NODE_ENV=production node ./lib/index.js",
+    "start": "node ./lib/index.js",
+    "setup": "npm install npm-cache -g",
+    "test": "NODE_ENV=test mocha test",
+    "quickstart": "npm run setup && npm run reinstall && npm run dev"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/spencerbeggs/seedling.git"
+  },
+  "author": "C. Spencer Beggs <spencer@beg.gs>",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/spencerbeggs/seedling/issues"
+  },
+  "homepage": "https://github.com/spencerbeggs/seedling#readme",
+  "dependencies": {
+    "aws-sdk": "^2.2.16",
+    "body-parser": "^1.14.1",
+    "compression": "^1.6.0",
+    "cookie-parser": "^1.4.0",
+    "dynamic-reverse-proxy": "^0.7.0-alpha2",
+    "express": "^4.13.3",
+    "express-device": "^0.4.2",
+    "express-handlebars": "^2.0.1",
+    "html-minifier": "^1.0.0",
+    "lodash": "^3.10.1",
+    "node-env-file": "^0.1.8",
+    "normalize.css": "^3.0.2",
+    "redux-thunk": "^1.0.0",
+    "serve-favicon": "^2.2.0"
+  },
+  "browser": {
+    "config": "./config/index.js"
+  },
+  "engines": {
+    "node": "5.x",
+    "npm": "2.x"
+  },
+  "devDependencies": {
+    "auth0-lock": "^7.12.1",
+    "aws-lambda-mock-context": "^1.0.0",
+    "aws-sdk": "^2.2.18",
+    "aws-sdk-promise": "0.0.2",
+    "babel": "^6.1.18",
+    "babel-loader": "^6.2.0",
+    "babel-plugin-syntax-decorators": "^6.1.18",
+    "babel-plugin-transform-class-properties": "^6.2.2",
+    "babel-plugin-transform-decorators": "^6.1.18",
+    "babel-plugin-transform-runtime": "^6.1.18",
+    "babel-polyfill": "^6.2.0",
+    "babel-preset-es2015": "^6.1.18",
+    "babel-preset-react": "^6.1.18",
+    "babel-preset-stage-0": "^6.1.18",
+    "babel-runtime": "^6.2.0",
+    "babelify": "^7.2.0",
+    "backbone": "^1.2.3",
+    "bootstrap": "git://github.com/twbs/bootstrap.git#v4.0.0-alpha",
+    "brfs": "^1.4.1",
+    "browser-sync": "^2.10.0",
+    "browserify": "^12.0.1",
+    "browserify-data": "^0.2.0",
+    "chai": "^3.4.1",
+    "coffee-loader": "^0.7.2",
+    "core-js": "^1.2.6",
+    "del": "^2.1.0",
+    "ejsify": "^1.0.0",
+    "envify": "^3.4.0",
+    "eslint": "^1.10.0",
+    "eslint-config-airbnb": "^1.0.0",
+    "eslint-config-es2015-react": "^0.1.2",
+    "eslint-plugin-babel": "^2.1.1",
+    "eslint-plugin-react": "^3.9.0",
+    "flux": "^2.1.1",
+    "gulp": "gulpjs/gulp#4.0",
+    "gulp-autoprefixer": "^3.0.2",
+    "gulp-babel": "^6.1.0",
+    "gulp-concat": "^2.4.1",
+    "gulp-copy": "0.0.2",
+    "gulp-eol": "^0.1.1",
+    "gulp-esdoc": "^0.2.0",
+    "gulp-esformatter": "^5.0.0",
+    "gulp-eslint": "^1.1.0",
+    "gulp-if": "^2.0.0",
+    "gulp-install": "^0.6.0",
+    "gulp-jsbeautifier": "1.0.1",
+    "gulp-jscs": "^3.0.2",
+    "gulp-json-format": "^1.0.0",
+    "gulp-less": "^3.0.5",
+    "gulp-minify-css": "^1.2.1",
+    "gulp-mocha": "^2.2.0",
+    "gulp-nodemon": "^2.0.4",
+    "gulp-notify": "^2.0.0",
+    "gulp-plumber": "^1.0.1",
+    "gulp-prettydiff": "^1.0.0",
+    "gulp-rename": "^1.2.0",
+    "gulp-sass": "^2.0.4",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-strip-debug": "^1.1.0",
+    "gulp-task-listing": "^1.0.1",
+    "gulp-uglify": "^1.5.1",
+    "gulp-util": "^3.0.6",
+    "gulp-watch": "^4.3.5",
+    "gulp-zip": "^3.0.2",
+    "hbsfy": "^2.3.1",
+    "history": "^1.13.1",
+    "html": "0.0.10",
+    "http-proxy": "^1.11.2",
+    "humps": "^1.0.0",
+    "jquery": "^2.1.3",
+    "json-loader": "^0.5.3",
+    "keymirror": "^0.1.1",
+    "less-plugin-autoprefix": "^1.5.1",
+    "mocha": "^2.3.4",
+    "moment": "^2.10.6",
+    "node-aws-lambda": "^0.1.6",
+    "normalizr": "^1.4.0",
+    "packageify": "^0.2.3",
+    "pretty-hrtime": "^1.0.1",
+    "prettydiff": "^1.15.17",
+    "react": "^0.14.3",
+    "react-dom": "^0.14.3",
+    "react-pure-render": "^1.0.2",
+    "react-redux": "^4.0.0",
+    "react-router": "^1.0.0",
+    "recursive-readdir": "^1.2.1",
+    "redux": "^3.0.4",
+    "redux-devtools": "^2.1.5",
+    "redux-router": "^1.0.0-beta4",
+    "redux-simple-router": "0.0.8",
+    "request": "^2.67.0",
+    "selectn": "^0.10.0",
+    "sinon": "^1.17.2",
+    "sinon-chai": "^2.8.0",
+    "transform-loader": "^0.2.3",
+    "uglify-loader": "^1.3.0",
+    "uglifyify": "^3.0.1",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-named": "^1.1.0",
+    "vinyl-source-stream": "^1.0.0",
+    "vinyl-transform": "^1.0.0",
+    "watchify": "^3.6.1",
+    "webpack": "^1.12.8",
+    "webpack-stream": "^2.1.1",
+    "whatwg-fetch": "^0.10.1"
+  }
 }
